# oosz

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.js
migrations/: 20240306053722_accounts.down.sql  20240306053722_accounts.up.sql  20240306055606_roles.down.sql  20240306055606_roles.up.sql
public/: app.css
public/css/: app.css
src/: main.rs
src/controllers/: auth_controller.rs  index_controller.rs  mod.rs  user_controller.rs
src/models/: mod.rs  page_data.rs  user.rs
src/utils/: database.rs  html.rs  mod.rs
static/: package.json  pnpm-lock.yaml  tailwind.config.js
static/public/css/: app.css
templates/components/: header.html
templates/layouts/: base.html  guest.html
templates/pages/: 404.html  index.html
templates/pages/auth/: register.html
