[package]
name = "oosz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.80"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
bcrypt = "0.15.0"
serde_json = "1.0.114"
chrono = { version = "0.4.34", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
regex = "1.10.3"
